// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`UsageMetric should render 1`] = `
<div
  className="overview-usage-metric-root"
>
  <h3
    className="metric-name"
  >
    Page Views
  </h3>
  <div
    className="metric-breakdown"
  >
    <Sticker
      circle={false}
      display="light"
      symbol="faro-page-views"
    />
    <div
      className="metric-breakdown-content"
    >
      <div>
        <span>
          <span
            className="metric-current"
            key="0"
          >
            0
          </span>
           of 
          <span
            className="metric-limit"
            key="7000000"
          >
            7,000,000
          </span>
        </span>
        <span
          className="text-secondary usage-since-label semibold"
        >
          0% since July 8, 2018
        </span>
      </div>
      <div
        className="text-muted small semibold"
      >
        Enterprise Plan 2,000,000 + 5,000,000 Add-On (1x)
      </div>
    </div>
  </div>
  <MetricBar
    display="primary"
    percent={0}
    size="default"
  />
  <div
    className="metric-definition text-secondary"
  >
    Non-unique visits to any of the pages synced to Analytics Cloud.
  </div>
</div>
`;

exports[`UsageMetric should render as a danger usage level if metric status is 2 1`] = `
<div
  className="overview-usage-metric-root"
>
  <h3
    className="metric-name"
  >
    Page Views
  </h3>
  <div
    className="metric-breakdown"
  >
    <Sticker
      circle={false}
      display="light"
      symbol="faro-page-views"
    />
    <div
      className="metric-breakdown-content"
    >
      <div>
        <span>
          <span
            className="metric-current"
            key="7500000"
          >
            7,500,000
          </span>
           of 
          <span
            className="metric-limit"
            key="7000000"
          >
            7,000,000
          </span>
        </span>
        <span
          className="text-secondary usage-since-label semibold"
        >
          107% since July 8, 2018
        </span>
      </div>
      <div
        className="text-muted small semibold"
      >
        Enterprise Plan 2,000,000 + 5,000,000 Add-On (1x)
      </div>
    </div>
  </div>
  <MetricBar
    display="danger"
    percent={1.0714285714285714}
    size="default"
  />
  <div
    className="metric-definition text-secondary"
  >
    Non-unique visits to any of the pages synced to Analytics Cloud.
  </div>
</div>
`;

exports[`UsageMetric should render as a warning usage level 1`] = `
<div
  className="overview-usage-metric-root"
>
  <h3
    className="metric-name"
  >
    Page Views
  </h3>
  <div
    className="metric-breakdown"
  >
    <Sticker
      circle={false}
      display="light"
      symbol="faro-page-views"
    />
    <div
      className="metric-breakdown-content"
    >
      <div>
        <span>
          <span
            className="metric-current"
            key="6500000"
          >
            6,500,000
          </span>
           of 
          <span
            className="metric-limit"
            key="7000000"
          >
            7,000,000
          </span>
        </span>
        <span
          className="text-secondary usage-since-label semibold"
        >
          93% since July 8, 2018
        </span>
      </div>
      <div
        className="text-muted small semibold"
      >
        Enterprise Plan 2,000,000 + 5,000,000 Add-On (1x)
      </div>
    </div>
  </div>
  <MetricBar
    display="warning"
    percent={0.9285714285714286}
    size="default"
  />
  <div
    className="metric-definition text-secondary"
  >
    Non-unique visits to any of the pages synced to Analytics Cloud.
  </div>
</div>
`;
